--- a/PhotoToolbox/Main.storyboard
+++ b/PhotoToolbox/Main.storyboard
@@ -25,23 +25,21 @@
                                     <constraint firstAttribute="width" secondItem="Xe3-S8-NKC" secondAttribute="height" multiplier="1:1" id="fsW-GF-seL"/>
                                 </constraints>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gId-AK-idX">
-                                <rect key="frame" x="150" y="617" width="75" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="DXX-Ks-l6r"/>
-                                </constraints>
-                                <state key="normal" title="Apply filter"/>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mbu-cR-4aO">
+                                <rect key="frame" x="0.0" y="451" width="375" height="216"/>
                                 <connections>
-                                    <action selector="applyFilter:" destination="3so-v1-xRH" eventType="touchUpInside" id="1Rs-b8-r5T"/>
+                                    <outlet property="dataSource" destination="3so-v1-xRH" id="lZ6-Eb-nCL"/>
+                                    <outlet property="delegate" destination="3so-v1-xRH" id="9AA-m3-uoY"/>
                                 </connections>
-                            </button>
+                            </pickerView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="Xe3-S8-NKC" firstAttribute="leading" secondItem="SUI-bb-qEv" secondAttribute="leading" id="0DG-5O-cIV"/>
                             <constraint firstItem="Xe3-S8-NKC" firstAttribute="trailing" secondItem="SUI-bb-qEv" secondAttribute="trailing" id="0Vb-CQ-1q0"/>
-                            <constraint firstItem="gId-AK-idX" firstAttribute="centerX" secondItem="A9U-ba-bdn" secondAttribute="centerX" id="gGy-kS-V5O"/>
-                            <constraint firstItem="A9U-ba-bdn" firstAttribute="bottom" secondItem="gId-AK-idX" secondAttribute="bottom" constant="20" id="lGl-CA-X41"/>
+                            <constraint firstItem="A9U-ba-bdn" firstAttribute="bottom" secondItem="mbu-cR-4aO" secondAttribute="bottom" id="1j2-gv-pWV"/>
+                            <constraint firstItem="mbu-cR-4aO" firstAttribute="leading" secondItem="SUI-bb-qEv" secondAttribute="leading" id="dVh-lt-lRQ"/>
+                            <constraint firstItem="mbu-cR-4aO" firstAttribute="trailing" secondItem="SUI-bb-qEv" secondAttribute="trailing" id="jer-zC-9y3"/>
                             <constraint firstItem="Xe3-S8-NKC" firstAttribute="top" secondItem="A9U-ba-bdn" secondAttribute="top" id="uNm-OI-0aH"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="A9U-ba-bdn"/>
@@ -59,6 +57,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="filterPicker" destination="mbu-cR-4aO" id="baQ-Ut-dG7"/>
                         <outlet property="photoView" destination="Xe3-S8-NKC" id="W00-bc-Y2A"/>
                     </connections>
                 </viewController>
